updates from Ilmar

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -8168,7 +8168,7 @@
 }
 
 @INPROCEEDINGS{WilbersLangtangenOdegaard2009,
-  author = {Wilbers, I. M. and Langtangen, H. P. and {\O}deg\aa rd, {\r A}.},
+  author = {Wilbers, I. M. and Langtangen, H. P. and {\O}deg\aa rd, \AA.},
   title = {{U}sing {C}ython to {S}peed up {N}umerical {P}ython {P}rograms},
   booktitle = {Proceedings of MekIT'09},
   year = {2009},
