--- a/unfinished/wilbers/chapter.tex
+++ b/unfinished/wilbers/chapter.tex
@@ -6,14 +6,14 @@
 
 Instant is a small Python module for just-in-time compilation (JIT)\index{JIT} (or inlining) of
 C/C++ code.
-Instant accepts plain C/C++ and is therefore conveniently combined with the code generating tools in Dolfin, FFC, and SFC.   
+Instant accepts plain C/C++ and is therefore conveniently combined with the code generating tools in DOLFIN, FFC, and SFC.   
 
 
 \section{Brief Overview of Instant and its role in FEniCS}
 
 In FEniCS, FFC and SFC are form compilers that generate UFC compliant C++ code based on the language UFL.  
 Within FFC and SFC, Instant is used to JIT-compile the C++ code to a Python module.   
-Similarly, Instant is used in Dolfin to JIT-compile \emp{Expression}s and \emp{SubDomain}s. 
+Similarly, Instant is used in DOLFIN to JIT-compile \emp{Expression}s and \emp{SubDomain}s. 
 See the Chapters~\ref{chap:alnaes-3,chap:logg-1,chap:mardal-2} for more information on these topics. 
 
 Instant relies on \citet{Beazleyothers2009} for the generation of wrapper
@@ -361,7 +361,7 @@ using Instant and OpenMP on different numbers of CPUs/threads.}
 %u = sin(x*x)*cos(y);
 %f = - diff(diff(u,x),x) - diff(diff(u,y),y)
 %\end{code}
-%In the following we generate code for a Dolfin \emp{Function}
+%In the following we generate code for a DOLFIN \emp{Function}
 %\begin{code}
 %def expression2string(name, expression):
 %    c_code = """
@@ -378,7 +378,7 @@ using Instant and OpenMP on different numbers of CPUs/threads.}
 %    """ % expression.printc()
 %    return (name, c_code)
 %\end{code}
-%Finally, we inline this Dolfin function using Instant as follows
+%Finally, we inline this DOLFIN function using Instant as follows
 %\begin{code}
 %(includes, flags, libraries, libdirs) = \
 %            instant.header_and_libs_from_pkgconfig("dolfin")
@@ -393,7 +393,7 @@ using Instant and OpenMP on different numbers of CPUs/threads.}
 %
 %\end{code}
 %
-%Since, \emp{U} and \emp{F} are now standard Dolfin functions they can be used
+%Since, \emp{U} and \emp{F} are now standard DOLFIN functions they can be used
 %in a standard fashion and solving the Poisson equation is then done as follows
 %\begin{code}
 %# Define boundary condition
@@ -577,7 +577,7 @@ arrays = [['len', 'a'],                        # a 1D array / vector
 \end{python}
 The variables names specified reflect the variable names in the C function
 signature. It is important that the order of the variables in the signature is
-retained for each array, ie. the signature should be:  
+retained for each array; that is, the signature should be:  
 \begin{python}
 double sum (int len_a, double*a,  
 	          int len_bx, int len_by, double* b,
@@ -707,7 +707,7 @@ processes are working on the same module, race conditions could potentially
 occur, where two or more processes believe the module is missing from the cache
 and try to write it simultaneously. To avoid race conditions, lock files have been  
 introduced. The lock files reside in the Instant cache, and locking is only
-enabled for modules that should be cached, ie. where the module name is not
+enabled for modules that should be cached; that is, where the module name is not
 given explicitly as argument to \emp{build\_\-module} or one of its wrapper
 functions. The first process to reach the stage where the module is copied
 from its temporary location to the Instant cache, will acquire a lock, and
@@ -978,8 +978,8 @@ If the module is found, the imported module is placed in the memory cache.
 
 \subsection[header\_and\_libs\_from\_pkgconfig]{\emp{header\_and\_libs\_from\_pkgconfig}}
 This function returns a list of include files, flags, libraries and library
-directories obtained from a
-pkg-config. It takes any
+directories obtained from 
+\emp{pkg-config}. It takes any
 number of arguments, one string for every package name.
 It returns four or five arguments. Unless the keyword
 argument \emp{returnLinkFlags} is given with the value \emp{True}, it returns
@@ -1002,12 +1002,12 @@ one mandatory argument is the command we want to run. Further, there are three
 keyword arguments. The first is \emp{input}, which should be a string
 containing input to the process once it is running. The other two
 are \emp{cwd} and \emp{env}. We refer to the documentation of \emp{subprocess}
-for a more detailes description of these, but in short the first is the
+for a more details description of these, but in short the first is the
 directory in which the process should be executed, while the second is used
 for setting the necessary environment variables.
 
 \subsection[get\_swig\_version]{\emp{get\_swig\_version}}
-The function returns the SWIG version number, eg. '1.3.36'. 
+The function returns the SWIG version number like  '1.3.36'. 
 
 \subsection[check\_swig\_version]{\emp{check\_swig\_version}}
 Takes a single argument, which should be a string on the same format as the
