--- a/TODO
+++ b/TODO
@@ -17,6 +17,11 @@ Things to check
 * Use of "..." vs ``...''
 * Add labels "C++ code", "Python code", "Bash code" to code
   environments, same as in DOLFIN paper
+* Things to add to a notation section in case we add one
+  (as requested by one of the referees)
+
+    \partial_n  = normal derivative
+    \delta_{ij} = Kronecker delta
 
 Things to discuss
 
