--- a/TODO
+++ b/TODO
@@ -22,6 +22,7 @@ Things to check
 
     \partial_n  = normal derivative
     \delta_{ij} = Kronecker delta
+* Use \Gamma_{\mathrm{D}} and \Gamma_{\mathrm{N}}
 
 Things to discuss
 
