Minor update to bibliography

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2346,7 +2346,7 @@
   timestamp = {2009.06.06}
 }
 
-@ARTICLE{ErikssonJohnson,
+@ARTICLE{ErikssonJohnsonIII,
   author = {K. Eriksson and C. Johnson},
   title = {Adaptive Finite Element Methods for Parabolic Problems {III}: {T}ime
 	Steps Variable in Space},
@@ -2355,7 +2355,7 @@
   timestamp = {2009.06.06}
 }
 
-@ARTICLE{ErikssonJohnson1995,
+@ARTICLE{ErikssonJohnson1995c,
   author = {K. Eriksson and C. Johnson},
   title = {Adaptive Finite Element Methods for Parabolic Problems {V}: {L}ong-time
 	integration},
@@ -2382,7 +2382,7 @@
 
 @ARTICLE{ErikssonJohnson1995b,
   author = {Eriksson, K. and Johnson, C.},
-  title = {{Adaptive finite element methods for parabolic problems IV: Nonlinear
+  title = {{Adaptive finite element methods for parabolic problems {IV}: Nonlinear
 	problems}},
   journal = {SIAM Journal on Numerical Analysis},
   year = {1995},
