added alternative image to chapter to avoid problems with permision

--- a/unfinished/hentschel/chapter.tex
+++ b/unfinished/hentschel/chapter.tex
@@ -38,11 +38,16 @@ important role in cushioning the brain and the spinal cord.
 \index{SAS}
 
 \begin{figure}\begin{center}
-\includegraphics[width=100mm]{chapters/hentschel/pdf/chiara_about.pdf}
-\caption{The cerebrospinal fluid system illustrated for a normal case (left), 
-    and for a Chiari I malformation patient with syringomyelia.}
-\editornote{Get permission to use this, found
-\emp{http://www.chiariinstitute.com/chiari\_malformation.html}}
+\includegraphics[width=0.8\textwidth]{chapters/hentschel/pdf/ChiariImage2.pdf}
+%\includegraphics[width=0.4\textwidth]{chapters/hentschel/pdf/door1.pdf}
+\caption{The picture shows an MR image of a patient with a Chiari I malformation. Chiari I patients are characterized by a very narrow passage at
+the foramen magnum; that is, the subarachnoid space, shown as white 
+on the image, is small compared to normals. Chiari patients often develop  
+cysts within the spinal cord, visible as white spots in the dark grey cord. Notice the
+relatively large distance between the narrow foramen magnum and 
+the cyst. 
+}
+
 \label{fig:anatomy}
 \end{center}\end{figure}
 
